--- a/Android/res/layout/main.xml
+++ b/Android/res/layout/main.xml
@@ -73,13 +73,15 @@
             android:src="@drawable/noun_project_2332"/>
 
     </RelativeLayout>
-
+
     <LinearLayout
-        android:id="@+id/teste"
+        android:id="@+id/canvas"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20px"
         android:layout_weight="0.40"
-        android:orientation="vertical" android:layout_marginBottom="20px">
+        android:orientation="vertical" >
+
     </LinearLayout>
 
     <RelativeLayout
