--- a/Android/res/layout/main.xml
+++ b/Android/res/layout/main.xml
@@ -3,22 +3,22 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" 
-    android:background="#e0e0e0">
+    android:background="#E9E9E9">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50px" android:layout_marginTop="10px" android:layout_marginBottom="10px">
+        android:layout_height="50px" android:background="#B0EEB2" android:layout_marginBottom="10px">
 
         <ImageView
             android:id="@+id/imageView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/noun_project_347" />
+            android:src="@drawable/noun_project_347" android:layout_marginTop="10px" android:layout_marginBottom="10px"/>
 
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="@string/hello" android:layout_gravity="center_vertical" android:textColor="#000000"/>
+            android:text="@string/hello" android:layout_gravity="center_vertical" android:textColor="#000000" android:layout_marginTop="10px" android:layout_marginBottom="10px"/>
 
     </LinearLayout>
 
@@ -78,7 +78,6 @@
         android:id="@+id/canvas"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20px"
         android:layout_weight="0.40"
         android:orientation="vertical" >
 
@@ -86,7 +85,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" android:layout_marginBottom="10px" android:layout_marginLeft="10px" android:layout_marginRight="10px">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/eraser"
@@ -102,15 +101,15 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/noun_project_835" />
-
+            android:src="@drawable/noun_project_835" android:layout_marginLeft="10px"/>
+
         <ImageView
             android:id="@+id/clean"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:src="@drawable/noun_project_2466" />
+            android:layout_alignTop="@+id/imageView3"
+            android:src="@drawable/noun_project_2466" android:paddingTop="10px" android:layout_marginRight="10px"/>
 
     </RelativeLayout>
 
