--- a/Server/app/views/home/index.html.erb
+++ b/Server/app/views/home/index.html.erb
@@ -2,8 +2,8 @@
 	<div class="tabs">
 		<ul class="breadcrumbs">
 			<li class="current"><a href="#">Home</a></li>
-			<li><a href="#getting-started">How it works?</a></li>
-			<li><a href="#how-it-works">Getting Started</a></li>
+			<li><a href="#getting-started">Getting started</a></li>
+			<li><a href="#how-it-works">How it works?</a></li>
 			<li><a href="#about-us">About Us</a></li>
 		</ul>
 	</div>
