New controller (radius/get), params are: lat, long, radius. It returns all draws within a radius from a coordinate.

--- a/Server/app/views/draws/edit.html.erb
+++ b/Server/app/views/draws/edit.html.erb
@@ -2,5 +2,7 @@
 
 <%= render 'form' %>
 
+<div> Distancia ao porto: <%= @distance %> Km.</div>
+
 <%= link_to 'Show', @draw %> |
 <%= link_to 'Back', draws_path %>
