added table words and relation with draws

--- a/Server/app/views/draws/index.html.erb
+++ b/Server/app/views/draws/index.html.erb
@@ -5,6 +5,7 @@
     <th>Id creator</th>
     <th>Latitude</th>
     <th>Longitude</th>
+    <th>Word Id</th>
     <th>Draw</th>
     <th>Challenge</th>
     <th>Description</th>
@@ -19,6 +20,7 @@
     <td><%= draw.id_creator %></td>
     <td><%= draw.latitude %></td>
     <td><%= draw.longitude %></td>
+    <td><%= draw.word_id %></td>
     <td><%= draw.draw %></td>
     <td><%= draw.challenge %></td>
     <td><%= draw.description %></td>
@@ -37,6 +39,7 @@
     <td><%= near.id_creator %></td>
     <td><%= near.latitude %></td>
     <td><%= near.longitude %></td>
+    <td><%= near.word_id %></td>
     <td><%= near.draw %></td>
     <td><%= near.challenge %></td>
     <td><%= near.description %></td>
