--- a/Server/app/views/draws/_form.html.erb
+++ b/Server/app/views/draws/_form.html.erb
@@ -24,6 +24,10 @@
     <%= f.text_field :longitude %>
   </div>
   <div class="field">
+    <%= f.label :word_id %><br />
+    <%= f.text_field :word_id %>
+  </div>
+  <div class="field">
     <%= f.label :draw %><br />
     <%= f.text_area :draw %>
   </div>
