--- a/Server/app/views/draws/index.html.erb
+++ b/Server/app/views/draws/index.html.erb
@@ -2,6 +2,7 @@
 
 <table>
   <tr>
+    <th>Id</th>
     <th>Id creator</th>
     <th>Latitude</th>
     <th>Longitude</th>
@@ -17,6 +18,7 @@
 
 <% @draws.each do |draw| %>
   <tr>
+    <td><%= draw.id %></td>
     <td><%= draw.id_creator %></td>
     <td><%= draw.latitude %></td>
     <td><%= draw.longitude %></td>
@@ -36,6 +38,7 @@
 <table>
 <% @nearbys.each do |near| %>
   <tr>
+    <td><%= near.id %></td>
     <td><%= near.id_creator %></td>
     <td><%= near.latitude %></td>
     <td><%= near.longitude %></td>
