--- a/Server/app/views/users/index.html.erb
+++ b/Server/app/views/users/index.html.erb
@@ -2,6 +2,7 @@
 
 <table>
   <tr>
+    <th>Id</th>
     <th>Email</th>
     <th>Name</th>
     <th>Id avatar</th>
@@ -16,6 +17,7 @@
 
 <% @users.each do |user| %>
   <tr>
+    <td><%= user.id %></td>
     <td><%= user.email %></td>
     <td><%= user.name %></td>
     <td><%= user.id_avatar %></td>
