--- a/Android/res/layout/mainmenu.xml
+++ b/Android/res/layout/mainmenu.xml
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/tvCoin" 
         android:layout_toRightOf="@id/tvPiggies"
-        android:textSize="6pt"></TextView>
+        android:textSize="6pt" android:layout_marginLeft="10px"></TextView>
     
     <TextView android:layout_width="wrap_content" 
         android:text="@string/challenges_done"
@@ -81,15 +81,16 @@
         android:layout_below="@id/tvNCCreated"
         android:layout_toRightOf="@id/tvNCGuessed"
         android:textSize="6pt"></TextView>
-    
-     
-    <TextView android:layout_width="wrap_content" 
-        android:text="@string/user_name"
+    
+    <TextView
+        android:id="@+id/userName"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/userName" 
- 		android:layout_below="@id/imgAvatar"
- 		android:paddingLeft="30dp"
-        android:textSize="6pt"></TextView>
+        android:layout_below="@id/imgAvatar"
+        android:paddingLeft="30dp"
+        android:text="@string/user_name"
+        android:textSize="6pt" android:layout_marginLeft="10px">
+</TextView>
 
     
 
