--- a/Server/app/views/avatars/index.html.erb
+++ b/Server/app/views/avatars/index.html.erb
@@ -2,6 +2,7 @@
 
 <table>
   <tr>
+    <th>Id</th>
     <th>Url</th>
     <th></th>
     <th></th>
@@ -10,6 +11,7 @@
 
 <% @avatars.each do |avatar| %>
   <tr>
+    <td><%= avatar.id %></td>
     <td><%= avatar.url %></td>
     <td><%= link_to 'Show', avatar %></td>
     <td><%= link_to 'Edit', edit_avatar_path(avatar) %></td>
