--- a/Server/app/assets/stylesheets/draws.css.scss
+++ b/Server/app/assets/stylesheets/draws.css.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the draws controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+#gm:hover{
+	background-color:transparent;
+}
+
+div.title{
+	padding-top:20px;
+}
