--- a/Android/res/layout/home.xml
+++ b/Android/res/layout/home.xml
@@ -2,21 +2,49 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical" android:layout_height="match_parent"
 	android:layout_width="wrap_content" android:layout_gravity="center_vertical|center_horizontal">
-	<TextView android:layout_width="wrap_content" android:text="@string/app_name" android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_gravity="center_vertical|center_horizontal" android:textSize="10pt" android:paddingTop="10px"></TextView>
-	<ImageView android:layout_height="wrap_content" android:src="@drawable/drawgeo_small" android:paddingTop="20px" android:id="@+id/imageView1" android:layout_gravity="center_vertical|center_horizontal" android:adjustViewBounds="true" android:layout_width="wrap_content"></ImageView>
-	
-	<TableRow android:layout_height="wrap_content" android:id="@+id/tableRow1"
-		android:layout_gravity="center_vertical|center_horizontal"
-		android:layout_width="wrap_content" android:paddingTop="30px">
-		<Button android:text="Login with Facebook" android:layout_height="wrap_content"
-			android:layout_width="wrap_content" android:id="@+id/loginFacebook"
-			android:layout_gravity="center_vertical|center_horizontal"></Button>
-	</TableRow>
-		<TableRow android:layout_height="wrap_content" android:id="@+id/tableRow1"
-		android:layout_gravity="center_vertical|center_horizontal"
-		android:layout_width="wrap_content" android:paddingTop="30px">
-		<Button android:text="Login with Email" android:layout_height="wrap_content"
-			android:layout_width="wrap_content" android:id="@+id/loginEmail"
-			android:layout_gravity="center_vertical|center_horizontal"></Button>
-	</TableRow>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="10px"
+            android:text="@string/app_name"
+            android:textSize="10pt" android:layout_centerHorizontal="true"/>
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_marginTop="22dp"
+            android:adjustViewBounds="true"
+            android:paddingTop="20px"
+            android:src="@drawable/drawgeo_small" />
+
+         <ImageView
+            android:id="@+id/loginFacebook"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/loginEmail"
+            android:layout_alignLeft="@+id/loginEmail"
+            android:layout_marginBottom="20dp"
+            android:src="@drawable/facebook" />
+         
+        <ImageView
+            android:id="@+id/loginEmail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:paddingBottom="20dp"
+            android:src="@drawable/google" />
+
+       
+
+    </RelativeLayout>
+
 </LinearLayout>
