--- a/Android/res/layout/home.xml
+++ b/Android/res/layout/home.xml
@@ -2,48 +2,31 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical" android:layout_height="match_parent"
 	android:layout_width="wrap_content" android:layout_gravity="center_vertical|center_horizontal">
-
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:background="@drawable/background" >
 
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="10px"
-            android:text="@string/app_name"
-            android:textSize="10pt" android:layout_centerHorizontal="true"/>
-
+       
         <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_marginTop="22dp"
-            android:adjustViewBounds="true"
-            android:paddingTop="20px"
-            android:src="@drawable/drawgeo_small" />
-
-         <ImageView
             android:id="@+id/loginFacebook"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_above="@+id/loginEmail"
             android:layout_alignLeft="@+id/loginEmail"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="30dp"
             android:src="@drawable/facebook" />
-         
-        <ImageView
+        
+         <ImageView
             android:id="@+id/loginEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:paddingBottom="20dp"
+            android:layout_marginBottom="213dp"
             android:src="@drawable/google" />
-
-       
+        
 
     </RelativeLayout>
 
