--- a/Android/res/layout/mainmenu.xml
+++ b/Android/res/layout/mainmenu.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical" android:background="@drawable/mainmenu">
     
     <TextView android:layout_width="wrap_content" android:text="@string/app_name" android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_gravity="center_vertical|center_horizontal" android:textSize="10pt" android:paddingTop="10dp" android:paddingBottom="10dp">
         
