--- a/Android/res/layout/mainmenu.xml
+++ b/Android/res/layout/mainmenu.xml
@@ -3,129 +3,156 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" android:background="@drawable/mainmenu">
-    
-    <TextView android:layout_width="wrap_content" android:text="@string/app_name" android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_gravity="center_vertical|center_horizontal" android:textSize="10pt" android:paddingTop="10dp" android:paddingBottom="10dp">
-        
-    </TextView>
+
 	<RelativeLayout
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    >
-    
-	   <ImageView
-        android:src="@drawable/avatar_place"
-        android:id="@+id/imgAvatar"
-        android:layout_alignParentLeft="true"
-        android:layout_width="100dip"
-        android:layout_height="75dip" />
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_marginTop="30dp" >
 
-    <TextView android:layout_width="wrap_content" 
-        android:text="@string/piggies"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvPiggies" 
- 
-        android:textSize="6pt"
-        android:layout_toRightOf="@id/imgAvatar"></TextView>
-    
-    <TextView android:layout_width="wrap_content" 
-        android:text="@string/coinName"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvCoin" 
-        android:layout_toRightOf="@id/tvPiggies"
-        android:textSize="6pt" android:layout_marginLeft="10px"></TextView>
-    
-    <TextView android:layout_width="wrap_content" 
-        android:text="@string/challenges_done"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvNCDone" 
- 		android:layout_below="@id/tvPiggies"
-        android:textSize="6pt"
-        android:layout_toRightOf="@id/imgAvatar"></TextView>
-    
-    <TextView android:layout_width="wrap_content" 
-        android:text=" Challenges done"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvCDone" 
-        android:layout_below="@id/tvPiggies"
-        android:layout_toRightOf="@id/tvNCDone"
-        android:textSize="6pt"></TextView>
-    
-    <TextView android:layout_width="wrap_content" 
-        android:text="@string/challenges_created"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvNCCreated" 
- 		android:layout_below="@id/tvNCDone"
-        android:textSize="6pt"
-        android:layout_toRightOf="@id/imgAvatar"></TextView>
-    
-    <TextView android:layout_width="wrap_content" 
-        android:text=" Challenges created"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvCCreated" 
-        android:layout_below="@id/tvNCDone"
-        android:layout_toRightOf="@id/tvNCCreated"
-        android:textSize="6pt"></TextView>
-    
-    <TextView android:layout_width="wrap_content" 
-        android:text="@string/challenges_guessed"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvNCGuessed" 
- 		android:layout_below="@id/tvNCCreated"
-        android:textSize="6pt"
-        android:layout_toRightOf="@id/imgAvatar"></TextView>
-    
-    <TextView android:layout_width="wrap_content" 
-        android:text=" Guessed your challenges"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvCGuessed" 
-        android:layout_below="@id/tvNCCreated"
-        android:layout_toRightOf="@id/tvNCGuessed"
-        android:textSize="6pt"></TextView>
-    
-    <TextView
-        android:id="@+id/userName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/imgAvatar"
-        android:paddingLeft="30dp"
-        android:text="@string/user_name"
-        android:textSize="6pt" android:layout_marginLeft="10px">
-</TextView>
+	    <TextView
+	        android:id="@+id/tvPiggies"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/piggies"
+	        android:textSize="6pt" >
+	    </TextView>
 
-    
+	    <TextView
+	        android:id="@+id/tvCoin"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginLeft="10px"
+	        android:layout_toRightOf="@id/tvPiggies"
+	        android:text="@string/coinName"
+	        android:textSize="6pt" >
+	    </TextView>
 
-    
+	    <TextView
+	        android:id="@+id/tvNCDone"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_below="@id/tvPiggies"
+	        android:text="@string/challenges_done"
+	        android:textSize="6pt" >
+	    </TextView>
 
-</RelativeLayout>
+	    <TextView
+	        android:id="@+id/tvCDone"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_below="@id/tvPiggies"
+	        android:layout_toRightOf="@id/tvNCDone"
+	        android:text=" Challenges done"
+	        android:textSize="6pt" >
+	    </TextView>
 
-	<TableRow android:layout_height="wrap_content" android:id="@+id/tableRow1"
-		android:layout_gravity="center_vertical|center_horizontal"
-		android:layout_width="wrap_content" android:paddingTop="30dp">
-		<Button android:text="Play now" android:layout_height="wrap_content"
-			android:layout_width="150dp" android:id="@+id/btnPlay"
-			android:layout_gravity="center_vertical|center_horizontal"></Button>
-	</TableRow>
-	<TableRow android:layout_height="wrap_content" android:id="@+id/tableRow1"
-		android:layout_gravity="center_vertical|center_horizontal"
-		android:layout_width="wrap_content" android:paddingTop="30dp">
-		<Button android:text="Store" android:layout_height="wrap_content"
-			android:layout_width="150dp" android:id="@+id/btnStore"
-			android:layout_gravity="center_vertical|center_horizontal"></Button>
-	</TableRow>
-	<TableRow android:layout_height="wrap_content" android:id="@+id/tableRow1"
-		android:layout_gravity="center_vertical|center_horizontal"
-		android:layout_width="wrap_content" android:paddingTop="30dp">
-		<Button android:text="Options" android:layout_height="wrap_content"
-			android:layout_width="150dp" android:id="@+id/btnOptions"
-			android:layout_gravity="center_vertical|center_horizontal"></Button>
-	</TableRow>
-	<TableRow android:layout_height="wrap_content" android:id="@+id/tableRow1"
-		android:layout_gravity="center_vertical|center_horizontal"
-		android:layout_width="wrap_content" android:paddingTop="30dp">
-		<Button android:text="About" android:layout_height="wrap_content"
-			android:layout_width="150dp" android:id="@+id/btnAbout"
-			android:layout_gravity="center_vertical|center_horizontal"></Button>
-	</TableRow>
+	    <TextView
+	        android:id="@+id/tvNCCreated"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_below="@id/tvNCDone"
+	        android:text="@string/challenges_created"
+	        android:textSize="6pt" >
+	    </TextView>
+
+	    <TextView
+	        android:id="@+id/tvCCreated"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_below="@id/tvNCDone"
+	        android:layout_toRightOf="@id/tvNCCreated"
+	        android:text=" Challenges created"
+	        android:textSize="6pt" >
+	    </TextView>
+
+	    <TextView
+	        android:id="@+id/tvNCGuessed"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_below="@id/tvNCCreated"
+	        android:text="@string/challenges_guessed"
+	        android:textSize="6pt" >
+	    </TextView>
+
+	    <TextView
+	        android:id="@+id/tvCGuessed"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_below="@id/tvNCCreated"
+	        android:layout_toRightOf="@id/tvNCGuessed"
+	        android:text=" Guessed your challenges"
+	        android:textSize="6pt" >
+	    </TextView>
+
+	    <TextView
+	        android:id="@+id/userName"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginLeft="10px"
+	        android:paddingLeft="30dp"
+	        android:text="@string/user_name"
+	        android:textSize="6pt" >
+	    </TextView>
+
+	    <ImageView
+	        android:id="@+id/imageView1"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_below="@+id/tvCoin"
+	        android:layout_toRightOf="@+id/tvCGuessed"
+	        android:src="@drawable/teste" />
+
+	    <TextView
+	        android:id="@+id/textView1"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignLeft="@+id/imageView1"
+	        android:layout_alignTop="@+id/imageView1"
+	        android:text="100"
+	        android:textSize="12pt" android:paddingLeft="9dp" android:textColor="#ffffff"/>
+
+	</RelativeLayout>
+
+	<RelativeLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content" android:layout_marginTop="30dp">
+
+		<ImageView
+		    android:id="@+id/btnPlay"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_alignParentTop="true"
+		    android:layout_centerHorizontal="true"
+		    android:src="@drawable/playnow" />
+
+		<ImageView
+		    android:id="@+id/btnStore"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_alignLeft="@+id/btnPlay"
+		    android:layout_below="@+id/btnPlay"
+		    android:layout_marginTop="15dp"
+		    android:src="@drawable/store" />
+
+		<ImageView
+		    android:id="@+id/btnOptions"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_alignLeft="@+id/btnStore"
+		    android:layout_below="@+id/btnStore"
+		    android:layout_marginTop="15dp"
+		    android:src="@drawable/options" />
+
+		<ImageView
+		    android:id="@+id/btnAbout"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_alignLeft="@+id/btnOptions"
+		    android:layout_below="@+id/btnOptions"
+		    android:layout_marginTop="15dp"
+		    android:src="@drawable/about" />
+
+	</RelativeLayout>
 	
 	
 	
