--- a/Android/res/layout/mainmenu.xml
+++ b/Android/res/layout/mainmenu.xml
@@ -4,118 +4,126 @@
     android:layout_height="match_parent"
     android:orientation="vertical" android:background="@drawable/mainmenu">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:paddingTop="5dp" android:gravity="center_horizontal">
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:src="@drawable/avatar" />
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/imageView1"
+            android:layout_below="@+id/imageView1"
+            android:paddingTop="2dp"
+            android:text="Tiago Babo"
+            android:textColor="#ffffff" />
+
+    </RelativeLayout>
+
 	<RelativeLayout
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
-	    android:layout_marginTop="30dp" >
-
-	    <TextView
-	        android:id="@+id/tvPiggies"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:text="@string/piggies"
-	        android:textSize="6pt" >
-	    </TextView>
-
-	    <TextView
-	        android:id="@+id/tvCoin"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_marginLeft="10px"
-	        android:layout_toRightOf="@id/tvPiggies"
-	        android:text="@string/coinName"
-	        android:textSize="6pt" >
-	    </TextView>
-
-	    <TextView
-	        android:id="@+id/tvNCDone"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_below="@id/tvPiggies"
-	        android:text="@string/challenges_done"
-	        android:textSize="6pt" >
-	    </TextView>
-
-	    <TextView
-	        android:id="@+id/tvCDone"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_below="@id/tvPiggies"
-	        android:layout_toRightOf="@id/tvNCDone"
-	        android:text=" Challenges done"
-	        android:textSize="6pt" >
-	    </TextView>
-
-	    <TextView
-	        android:id="@+id/tvNCCreated"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_below="@id/tvNCDone"
-	        android:text="@string/challenges_created"
-	        android:textSize="6pt" >
-	    </TextView>
-
-	    <TextView
-	        android:id="@+id/tvCCreated"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_below="@id/tvNCDone"
-	        android:layout_toRightOf="@id/tvNCCreated"
-	        android:text=" Challenges created"
-	        android:textSize="6pt" >
-	    </TextView>
-
-	    <TextView
-	        android:id="@+id/tvNCGuessed"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_below="@id/tvNCCreated"
-	        android:text="@string/challenges_guessed"
-	        android:textSize="6pt" >
-	    </TextView>
-
-	    <TextView
-	        android:id="@+id/tvCGuessed"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_below="@id/tvNCCreated"
-	        android:layout_toRightOf="@id/tvNCGuessed"
-	        android:text=" Guessed your challenges"
-	        android:textSize="6pt" >
-	    </TextView>
-
-	    <TextView
-	        android:id="@+id/userName"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_marginLeft="10px"
-	        android:paddingLeft="30dp"
-	        android:text="@string/user_name"
-	        android:textSize="6pt" >
-	    </TextView>
+	    android:layout_marginTop="20dp" android:gravity="center_horizontal">
 
 	    <ImageView
-	        android:id="@+id/imageView1"
+	        android:id="@+id/challengesdone"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:layout_below="@+id/tvCoin"
-	        android:layout_toRightOf="@+id/tvCGuessed"
-	        android:src="@drawable/teste" />
+	        android:src="@drawable/challendesdone" />
+
+	    <ImageView
+	        android:id="@+id/challengescreated"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentTop="true"
+	        android:layout_toRightOf="@+id/challengesdone"
+	        android:paddingLeft="10dp"
+	        android:src="@drawable/challengescreated" />
+
+	    <ImageView
+	        android:id="@+id/guessedyours"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentTop="true"
+	        android:layout_toRightOf="@+id/challengescreated"
+	        android:paddingLeft="10dp"
+	        android:src="@drawable/guessedyours" />
 
 	    <TextView
-	        android:id="@+id/textView1"
+	        android:id="@+id/guessedyourstext"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:layout_alignLeft="@+id/imageView1"
-	        android:layout_alignTop="@+id/imageView1"
-	        android:text="100"
-	        android:textSize="12pt" android:paddingLeft="9dp" android:textColor="#ffffff"/>
+	        android:layout_alignParentTop="true"
+	        android:layout_alignRight="@+id/guessedyours"
+	        android:gravity="center_horizontal"
+	        android:paddingTop="2dp"
+	        android:text="10"
+	        android:textColor="#ffffff"
+	        android:textSize="10pt"
+	        android:width="99px" />
+
+	    <TextView
+	        android:id="@+id/chanllengesdonetext"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentTop="true"
+	        android:layout_toLeftOf="@+id/challengescreated"
+	        android:gravity="center_horizontal"
+	        android:paddingTop="2dp"
+	        android:text="123"
+	        android:textColor="#ffffff"
+	        android:textSize="10pt"
+	        android:width="99px" />
+
+	    <TextView
+	        android:id="@+id/chanllengescreatedtext"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentTop="true"
+	        android:layout_toLeftOf="@+id/guessedyours"
+	        android:gravity="center_horizontal"
+	        android:paddingTop="2dp"
+	        android:text="123"
+	        android:textColor="#ffffff"
+	        android:textSize="10pt"
+	        android:width="99px" />
+
+	    <ImageView
+	        android:id="@+id/piggies"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentTop="true"
+	        android:layout_toRightOf="@+id/guessedyours"
+	        android:paddingLeft="10dp"
+	        android:src="@drawable/piggies" />
+
+	    <TextView
+	        android:id="@+id/piggiestext"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentTop="true"
+	        android:layout_alignRight="@+id/piggies"
+	        android:bufferType="normal"
+	        android:gravity="center_horizontal"
+	        android:paddingTop="6dp"
+	        android:text="250"
+	        android:textColor="#ffffff"
+	        android:textSize="10pt"
+	        android:width="99px" />
 
 	</RelativeLayout>
 
 	<RelativeLayout
 	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content" android:layout_marginTop="30dp">
+	    android:layout_height="wrap_content" android:layout_marginTop="20dp">
 
 		<ImageView
 		    android:id="@+id/btnPlay"
