--- a/Android/res/layout/mainmenu.xml
+++ b/Android/res/layout/mainmenu.xml
@@ -7,9 +7,9 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" android:paddingTop="5dp" android:gravity="center_horizontal">
-
+
         <ImageView
-            android:id="@+id/imageView1"
+            android:id="@+id/avatar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -17,11 +17,11 @@
             android:src="@drawable/avatar" />
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/imageView1"
-            android:layout_below="@+id/imageView1"
+            android:layout_alignLeft="@+id/avatar"
+            android:layout_below="@+id/avatar"
             android:paddingTop="2dp"
             android:text="Tiago Babo"
             android:textColor="#ffffff" />
@@ -69,9 +69,9 @@
 	        android:textColor="#ffffff"
 	        android:textSize="10pt"
 	        android:width="99px" />
-
+
 	    <TextView
-	        android:id="@+id/chanllengesdonetext"
+	        android:id="@+id/challengesdonetext"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_alignParentTop="true"
@@ -82,9 +82,9 @@
 	        android:textColor="#ffffff"
 	        android:textSize="10pt"
 	        android:width="99px" />
-
+
 	    <TextView
-	        android:id="@+id/chanllengescreatedtext"
+	        android:id="@+id/challengescreatedtext"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_alignParentTop="true"
