--- a/Android/res/layout/drawcanvas.xml
+++ b/Android/res/layout/drawcanvas.xml
@@ -3,29 +3,25 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" 
-    android:background="#E9E9E9">
+    android:background="@drawable/canvasbackground">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50px" android:background="#B0EEB2" android:layout_marginBottom="10px">
-
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/noun_project_347" android:layout_marginTop="10px" android:layout_marginBottom="10px"/>
+        android:layout_height="50px" android:layout_marginBottom="5dp">
 
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="@string/hello" android:layout_gravity="center_vertical" android:textColor="#000000" android:layout_marginTop="10px" android:layout_marginBottom="10px"/>
+            android:text="@string/hello" android:layout_gravity="center_vertical" android:textColor="#ffffff" android:layout_marginTop="0dp" android:layout_marginLeft="40dp"/>
 
     </LinearLayout>
-
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10px" android:layout_marginRight="10px">
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" >
 
         <ImageView
             android:id="@+id/black"
@@ -33,26 +29,23 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:paddingLeft="10px"
             android:src="@drawable/color4" />
-
+
         <ImageView
-            android:id="@+id/yellow"
+            android:id="@+id/store"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="38dp"
-            android:paddingLeft="10px"
-            android:src="@drawable/color1" />
-
+            android:src="@drawable/noun_project_2332" />
+
         <ImageView
             android:id="@+id/red"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="41dp"
             android:layout_toRightOf="@+id/black"
-            android:paddingLeft="10px"
+            android:paddingLeft="10dp"
             android:src="@drawable/color2" />
 
         <ImageView
@@ -61,16 +54,17 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/red"
-            android:paddingLeft="10px"
+            android:paddingLeft="10dp"
             android:src="@drawable/color3" />
-
+
         <ImageView
-            android:id="@+id/store"
+            android:id="@+id/yellow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:src="@drawable/noun_project_2332" />
+            android:layout_toRightOf="@+id/green"
+            android:paddingLeft="10dp"
+            android:src="@drawable/color1" />
 
     </RelativeLayout>
 
@@ -101,7 +95,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10px"
+            android:layout_marginLeft="10dp"
             android:src="@drawable/noun_project_835" />
 
         <ImageView
@@ -110,7 +104,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_alignTop="@+id/imageView3"
-            android:src="@drawable/noun_project_2466" android:paddingTop="10px" android:layout_marginRight="10px"/>
+            android:src="@drawable/noun_project_2466" android:paddingTop="5dp" android:layout_marginRight="10dp"/>
 
     </RelativeLayout>
 
