--- a/Server/app/views/draws/index.html.erb
+++ b/Server/app/views/draws/index.html.erb
@@ -8,6 +8,8 @@
     <th>Longitude</th>
     <th>Word Id</th>
     <th>Draw</th>
+    <th>Drawx</th>
+    <th>Drawy</th>
     <th>Challenge</th>
     <th>Description</th>
     <th>Password</th>
@@ -24,6 +26,8 @@
     <td><%= draw.longitude %></td>
     <td><%= draw.word_id %></td>
     <td><%= draw.draw %></td>
+    <td><%= draw.drawx %></td>
+    <td><%= draw.drawy %></td>
     <td><%= draw.challenge %></td>
     <td><%= draw.description %></td>
     <td><%= draw.password %></td>
@@ -47,6 +51,8 @@
     <td><%= near.longitude %></td>
     <td><%= near.word_id %></td>
     <td><%= near.draw %></td>
+    <td><%= near.drawx %></td>
+    <td><%= near.drawy %></td>
     <td><%= near.challenge %></td>
     <td><%= near.description %></td>
     <td><%= near.password %></td>
