--- a/Server/app/views/draws/show.html.erb
+++ b/Server/app/views/draws/show.html.erb
@@ -26,6 +26,16 @@
 </p>
 
 <p>
+  <b>Drawx:</b>
+  <%= @draw.drawx %>
+</p>
+
+<p>
+  <b>Drawy:</b>
+  <%= @draw.drawy %>
+</p>
+
+<p>
   <b>Challenge:</b>
   <%= @draw.challenge %>
 </p>
