--- a/Server/app/views/draws/_form.html.erb
+++ b/Server/app/views/draws/_form.html.erb
@@ -32,6 +32,14 @@
     <%= f.text_area :draw %>
   </div>
   <div class="field">
+    <%= f.label :drawx %><br />
+    <%= f.text_area :drawx %>
+  </div>
+  <div class="field">
+    <%= f.label :drawy %><br />
+    <%= f.text_area :drawy %>
+  </div>
+  <div class="field">
     <%= f.label :challenge %><br />
     <%= f.check_box :challenge %>
   </div>
