--- a/Server/app/assets/stylesheets/home.css.scss
+++ b/Server/app/assets/stylesheets/home.css.scss
@@ -2,22 +2,46 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.logo{
+div.logo{
 	width:100%;
 	background-color:#a0d6e4;
 }
 
-.logo-img{
+img.logo-img{
 	text-align:center;
 	height:auto;
 	width:540px;
 }
 
-.city-banner{
+img.banner-img{
+	height:32px;
+	width:auto;
+}
+
+div.city-banner{
 	background-image: url(landscape.png);
 	background-repeat:no-repeat;
 	min-height:381px;
 	width:100%;
+}
+
+span#search-tab
+{
+	float:right;
+}
+
+div.tabs-overlay{
+	width:100%;
+}
+
+div#main{
+	height:100%;
+	width:100%;
+}
+
+form{
+	margin:0px;
+	margin-top:5px;
 }
 
 body{
@@ -35,38 +59,37 @@ ul, ol {
 margin-bottom: 0px;
 }
 
-.pencil-img{
+img.pencil-img{
 	margin:100px 0% 0% 50%;
 	height:150px;
 	width:auto;
 }
 
-.pencil{
+div.pencil{
 	width:100%;
 }
 
-.container-info{
+div.container-info{
 	height:auto;
 	margin-top:20%;
 }
 
-.sub-title{
+div.sub-title{
 	margin-top:50%;
 	padding-left:5%;
 }
 
-.google-play{
-	height:48px;
-	width:auto;
-}
-
-.footer{
+div.footer{
 	margin-top:50px;
 	min-height:50px;
 }
 
+div#map_canvas{
+	width:100%;
+	height:100%;
+}
 
-.depth {
+p.depth {
 	width:96%;
 	padding:2%;
 	text-align: justify;
