--- a/Server/app/assets/stylesheets/scaffolds.css.scss
+++ b/Server/app/assets/stylesheets/scaffolds.css.scss
@@ -18,9 +18,7 @@ a {
   color: #000;
   &:visited {
     color: #666; }
-  &:hover {
-    color: #fff;
-    background-color: #000; } }
+  }
 
 div {
   &.field, &.actions {
