--- a/Server/app/views/home/map.html.erb
+++ b/Server/app/views/home/map.html.erb
@@ -1,1 +1,17 @@
-<div id="map_canvas" style="width:100%; height:100%"></div>
+<div id="main">
+	<div class="tabs-overlay">
+		<ul class="breadcrumbs">
+			<a id="logo-ref" href="/"><img class="banner-img" src="/assets/draw.png"></a>
+			<span id="search-tab">
+				<%= form_tag( { :action => :map, }, { :method => :get }) %>
+					Seek around the world: 
+					<input id="search" type="text" value="" name="search"/>
+					<%= submit_tag( "Search" ) %>
+				</form>
+			</span>
+		</ul>
+	</div>
+	<div id="map_canvas"></div>
+	<input id="longitude" type="hidden" value="<%= @s[0].nil? ? "-8.610535" : @s[0].longitude %>" name="longitude" />
+	<input id="latitude" type="hidden" value="<%=  @s[0].nil? ? "41.147379" : @s[0].latitude %>" name="latitude" />
+</div>
