added ranking column

--- a/Server/app/views/users/_form.html.erb
+++ b/Server/app/views/users/_form.html.erb
@@ -39,6 +39,10 @@
     <%= f.label :num_success %><br />
     <%= f.number_field :num_success %>
   </div>
+  <div class="field">
+    <%= f.label :ranking %><br />
+    <%= f.number_field :ranking %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
