--- a/Server/app/views/users/show.html.erb
+++ b/Server/app/views/users/show.html.erb
@@ -35,6 +35,11 @@
   <%= @user.num_success %>
 </p>
 
+<p>
+  <b>Ranking:</b>
+  <%= @user.ranking %>
+</p>
+
 <b>Colors:</b>
 [
 <% @user.colors.each do |color| %>
