--- a/Server/app/views/users/index.html.erb
+++ b/Server/app/views/users/index.html.erb
@@ -10,6 +10,7 @@
     <th>Keys</th>
     <th>Num done</th>
     <th>Num success</th>
+    <th>Ranking</th>
     <th></th>
     <th></th>
     <th></th>
@@ -25,6 +26,7 @@
     <td><%= user.keys %></td>
     <td><%= user.num_done %></td>
     <td><%= user.num_success %></td>
+    <td><%= user.ranking %></td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
     <td><%= link_to 'Destroy', user, :confirm => 'Are you sure?', :method => :delete %></td>
